Fix navbar to attempt to make it not wrap on mobile

--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ header p {
 }
 
 nav {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
     margin-top: 1.5rem;
 }
 
